...
                                <buttonConfiguration key="configuration" style="plain">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Refresh">
                                            <attributes>
                                                <font key="NSFont" size="21" name="Helvetica"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Compare" image="eye.circle.fill" catalog="system" selectedImage="eye.circle.fill" id="AzY-ct-QxY">
                        <color key="badgeColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </tabBarItem>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xUO-Id-oWX">
                                <rect key="frame" x="63" y="277" width="288" height="52"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                <color key="backgroundColor" name="TertiaryColour"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7EY-L4-LCe">
                                <rect key="frame" x="63" y="128" width="41" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Log In">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                    <color key="titleShadowColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                <state key="normal" title="Match">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                        <rect key="frame" x="142" y="204" width="91" height="31"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Play Again"/>
                                        <connections>
                                            <action selector="playAgainPressed:" destination="ZWW-Qb-fea" eventType="touchUpInside" id="2zK-gr-nSM"/>
...
